--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
         
       </footer>
-      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></button>
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-double-up ff" aria-hidden="true"></i></button>
     <script src="script.js"></script>
 </body>
 </html>
