--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </nav>
     <!--Banner-->
-    <div class="main-container banner d-flex justify-content-between ">
-        <div class="col-md-5">
+    <div class="banner main-container add">
+        <div class="banner-left">
             <h1>
                 One-Stop<br>Design Solution
             </h1>
@@ -47,11 +47,13 @@
             <br>
             <a href="#" class="try-for-free-btn">Try For Free &nbsp; <i class="fa fa-long-arrow-right" style="color:white;"></i></a>
         </div>
-        <div class="video col-md-7 col video-playy">
-            <img src="img/landing.jpg" alt="">
-            <button type="button" class="btn btn-custom-video" data-toggle="modal" data-target="#exampleModalCenter" onclick="playVideo()">
-                <i class="fa-solid fa-play"></i>
-              </button>   
+        <div class="banner-right">
+            <div class="imag">
+                <img src="img/landing.jpg" alt="" class="video-cover">
+                <button type="button" class="btn btn-custom-video" data-toggle="modal" data-target="#exampleModalCenter" onclick="playVideo()">
+                    <i class="fa-solid fa-play"></i>
+                  </button>
+            </div>
         </div>
     </div>
 
@@ -74,12 +76,12 @@
         </div>
       </div>
       <!--third-Section-->
-      <div class="container-fluid section-third">
+      <div class="container-fluid section-third shadow-in">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-12 col-md-5 img-container">
                 <img src="img/latest-trends.png" alt="" class="">
             </div>
-            <div class="col-md-7 details">
+            <div class="col-12 col-md-7 details">
                 <h1>Ready-to-use<br>
                     designs</h1>
                 <h2>1000+ Designs</h2>
@@ -91,27 +93,27 @@
       </div>
       <!--end-third-Section-->
       <!--fourth-section-->
-      <div class="container-fluid main-container">
+      <div class="container-fluid main-container shadow-out">
         <div class="row">
-            <div class="col-md-7 details">
+            <div class="col-12 col-md-7 order-2 order-md-1 details">
                 <h1>Quickly adapt<br>
                     trends</h1>
                 <h2>Latest Trend Reports</h2>
                 <p>Tap the global trends and incorporate them into your fashion range.</p>
             </div>
-            <div class="col-md-5">
-                <img src="img/image 5.jpg" alt="" class="image">
+            <div class="col-12 col-md-5 order-1 order-md-2 img-container">
+                <img src="img/image 5.jpg" alt="" class="image res-im">
             </div>
         </div>
       </div>
       <!--end-fourth-section-->
       <!--fifth-section-->
-      <div class="container-fluid main-container">
+      <div class="container-fluid main-container shadow-in">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-12 col-md-5 img-container">
                 <img src="img/improve-design.png" alt="" class="image">
             </div>
-            <div class="col-md-7">
+            <div class="col-12 col-md-7 details">
                 <h1>Improve Design<br>
                     Efficiency</h1>
                 <h2>View Designs in 3D</h2>
@@ -121,15 +123,15 @@
         </div>
       </div>
       <!--end-fifth-section-->
-      <div class="container-fluid main-container">
+      <div class="container-fluid main-container shadow-out">
         <div class="row">
-            <div class="col-md-7 details">
+            <div class="col-12 col-md-7 details order-2 order-md-1">
                 <h1>Global creative<br>
                     partners</h1>
                 <h2>Diverse Creativity</h2>
                 <p>Designs from around the world.</p>
             </div>
-            <div class="col-md-5">
+            <div class="col-12 col-md-5 order-1 order-md-2 img-container">
                 <img src="img/global-creative.png" alt="" class="image">
             </div>
         </div>
@@ -145,7 +147,7 @@
       <footer class="footer mt-5">
         <div class="container-fluid main-container pt-5 pb-5">
             <div class="row">
-                <div class="col-md-4 pl-5">
+                <div class="col-md-4 col-sm-6 pl-5">
                     <h1>Explore</h1>
                     <ul>
                         <li><a href="#"><span class="hover-effect">Meet the Team</span>
@@ -155,14 +157,14 @@
                         <li><a href="#"><span class="hover-effect">Contact us</span></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6 pl-5">
                     <h1>Contact Us</h1>
                     <ul>
                         <li><a href="#"><i class="fa-solid fa-envelope"></i><span class="hover-effect">connect@trendgully.com</span></a></li>
                         <li><a href="#"><i class="fa-solid fa-location-dot"></i><span class="hover-effect">Trendgully Pte. Ltd. Singapore</span></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-12 a-center">
                     <select name="country" class=" form-control seldrop mb-3">
                         <option selected="selected" value="">Choose Country</option>
                         <option value="Afghanistan">Afghanistan</option>
